0029736: Some Warnings During Compound Transfer to IGES Look Dubious

Incorrect (legacy) warnings during IGES export are removed